

                        CHANGES
---------------------------------
In this files, you will find changes between java OMiSCID versions.
*should: make configurable (through Java and C++) the timeout for control queries
*should: see Socket. keepAlive
*could: dnssd client auto connect/reconnect
** currently fatal exceptions, at least
*** 	at fr.prima.omiscid.dnssd.client.ServiceBrowser$1.run(ServiceBrowser.java:93)
*** 	at fr.prima.omiscid.dnssd.client.ServiceRegistrator.run(ServiceRegistrator.java:71)
*could: dnssd client has a list of expected servers
*could: Service isa ServiceProxy!
*should: avoid the name duplication that appears in autocompletion (fr.​prima.​omiscid.​user.​service vs ....control (autogenerated))


http://gforge.inria.fr/tracker/?atid=1526&group_id=363&func=browse

REMOVE: "Unknown Bip Connector io"

!!! a service video started on prometheus /loc.../svbugdiscovery rev. 5096
p   omiscid                         - Object Oriented Opensource Middleware for 
i   omiscid-avahi-debug             - OMiSCID libraries (using avahi).          Version : 1.5.0
i   omiscid-dev                     - OMiSCID Headers and Dev files             
p   omiscid-ext                     - Extension for the OMiSCID middleware inclu
p   omiscid-ext-dev                 - OMiSCID Extension development files       
!!! is visible with omiscidgui using mdns but not using jive

test 55 failed once with avahi (connection refused exception)

---------------------------------
In this files, you will find changes between java OMiSCID versions.

1.
r

1.6.0
r6250
        fix:  (API) Service#getVariableAccessType now returns VariableAccessType instead of string
        impr: dnssd server/proxy now fully operational (useful on networks where multicast is filtered)
        impr: (internal) added a class to expose some internal details used for instance in the GUI

1.5.1
r6108
        fix:  race conditions causing deadlock on connection