@@ -3,16 +3,22 @@
                         CHANGES
 ---------------------------------
 In this files, you will find changes between java OMiSCID versions.
+*should: allow an improved java.nio Buffers based message reception (gain 1 copy)
 *should: make configurable (through Java and C++) the timeout for control queries
 *should: see Socket. keepAlive
+*should: reimplement lower levels
+*should: have a mean to do configuration through a file (user wide for instance)
 *could: dnssd client auto connect/reconnect
 ** currently fatal exceptions, at least
 *** 	at fr.prima.omiscid.dnssd.client.ServiceBrowser$1.run(ServiceBrowser.java:93)
 *** 	at fr.prima.omiscid.dnssd.client.ServiceRegistrator.run(ServiceRegistrator.java:71)
 *could: dnssd client has a list of expected servers
 *could: Service isa ServiceProxy!
-*should: avoid the name duplication that appears in autocompletion (fr.​prima.​omiscid.​user.​service vs ....control (autogenerated))
 
+*should: avoid the name duplication that appears in autocompletion (fr.​prima.​omiscid.​user.​service vs ....control (autogenerated))
+*should: improve reporting with jive when /etc/hosts is wrong, that is to say:
+** remove try-catch on DNSSDFactoryJivedns (or rethrow as runtimeexception)
+** if no factory is found, suggest using more verbosity (that will display all errors, e.g. ...VERBOSE_MODE debug)
 
 http://gforge.inria.fr/tracker/?atid=1526&group_id=363&func=browse
 
